--- a/flutter_log/pubspec.yaml
+++ b/flutter_log/pubspec.yaml
@@ -1,9 +1,10 @@
 name: flutterlog
-description: A new Flutter application.
+description: A flutter log tool for developing.
+homepage: https://github.com/LinXunFeng/flutter_log
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+# publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -15,12 +16,13 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.0.0
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  stack_trace: ^1.10.0
   flutter:
     sdk: flutter
 
