<update> (package): 调整库名

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_log
+name: alog
 description: A flutter log tool for developing.
 homepage: https://github.com/LinXunFeng/flutter_log
 version: 1.0.0
