--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -29,7 +29,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_log:
+  alog:
     path: ../
 
   # The following adds the Cupertino Icons font to your application.
